# fastapi-scaffold

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .env  .gitignore  README.md  config.py  main.py  pyproject.toml  setup_project.sh
{{cookiecutter.project_name}}/app/: __init__.py
{{cookiecutter.project_name}}/app/api/: __init__.py
{{cookiecutter.project_name}}/app/api/health/: __init__.py  api.py
{{cookiecutter.project_name}}/app/repository/: sql_context.py
